fix(deps): update dependency org.springframework.boot:spring-boot-starter-parent to v3.2.0 (#1011)
* fix(deps): update dependency org.springframework.boot:spring-boot-starter-parent to v3.2.0

* feat : upgrade cloud version

* feat: upgrade to java 21

* fix build issue

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Raja Kolli <rajadilipkolli@gmail.com>