@@ -10,7 +10,7 @@ public class RecordNotFoundException extends RestControllerException {
 	private static final long serialVersionUID = 7270193384232612561L;
 
 	public RecordNotFoundException(String message) {
-		super(String.format("%s not found.", message), NOT_FOUND);
+		super("%s not found.".formatted(message), NOT_FOUND);
 	}
 
 }
